--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: portfolio-backend
     env: python
     buildCommand: cd backend && pip install -r requirements.txt
-    startCommand: cd backend && python run.py
+    startCommand: cd backend && gunicorn --bind 0.0.0.0:$PORT 'run:app'
     envVars:
       - key: DATABASE_URL
         fromDatabase:
