--- a/render.yaml
+++ b/render.yaml
@@ -22,3 +22,18 @@ services:
     envVars:
       - key: REACT_APP_API_URL
         value: https://portfolio-backend.onrender.com/api
+
+jobs:
+  - name: seed-database
+    type: cron
+    schedule: false # This is a one-time job
+    env: python
+    buildCommand: cd backend && pip install -r requirements.txt
+    startCommand: cd backend && python seed_production.py
+    envVars:
+      - key: DATABASE_URL
+        fromDatabase:
+          name: portfolio_4oeu
+          property: connectionString
+      - key: FLASK_ENV
+        value: production
