--- a/render.yaml
+++ b/render.yaml
@@ -25,8 +25,7 @@ services:
 
 jobs:
   - name: seed-database
-    type: cron
-    schedule: false # This is a one-time job
+    type: job
     env: python
     buildCommand: cd backend && pip install -r requirements.txt
     startCommand: cd backend && python seed_production.py
